# cosmic-ext-applet-privacy-indicator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
res/: dev.DBrox.CosmicPrivacyIndicator.metainfo.xml
src/: applet.rs  camera.rs  main.rs  rec_icon.rs
