[package]
name = "cosmic-ext-applet-privacy-indicator"
version = "0.2.0"
edition = "2024"
authors = ["D-Brox <davidfbg00@gmail.com>"]
license = "GPL-3.0-only"
description = "Privacy indicator for the COSMIC Desktop"

[dependencies]
bimap = "0.6.3"
cosmic-time = { git = "https://github.com/pop-os/cosmic-time.git" }
inotify = "0.11.0"
pipewire = "0.9.2"
serde = "1.0.228"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]

# # Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }

[package.metadata.deb]
license-file = "LICENSE"
assets = [
  [
    "target/release/cosmic-ext-applet-privacy-indicator",
    "usr/bin/",
    "755",
  ],
  [
    "res/dev.DBrox.CosmicPrivacyIndicator.desktop",
    "usr/share/applications/",
    "644",
  ],
  [
    "res/dev.DBrox.CosmicPrivacyIndicator.metainfo.xml",
    "usr/share/metainfo/",
    "644",
  ],
  [
    "res/dev.DBrox.CosmicPrivacyIndicator.svg",
    "usr/share/icons/hicolor/scalable/apps/",
    "644",
  ],
]
depends = ["libpipewire-0.3-0", "libxkbcommon0", "libc6"]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/cosmic-ext-applet-privacy-indicator", dest = "/usr/bin/", mode = "755" },
  { source = "LICENSE", dest = "/usr/share/doc/cosmic-ext-applet-privacy-indicator/LICENSE", doc = true, mode = "644" },
  { source = "res/*.desktop", dest = "/usr/share/applications/", mode = "644" },
  { source = "res/*.svg", dest = "/usr/share/icons/scalable/apps/", mode = "644" },
]

[package.metadata.generate-rpm.requires]
glibc = "*"
libxkbcommon = "*"
pipewire-libs = "*"
